# digital-garden

./: .gitignore  2023-jeju-travel.md  2024-birthday.md  2024-review.md  2024-w18.md  2024-w19.md  2024-w20.md  2024-w21.md  2024-w22.md  2024-w23.md  2024-w24.md  2024-w25.md  2024-w26.md  2024-w27.md  2024-w28.md  2024-w29.md  2024-w30.md  2024-w31.md  2024-w32.md  2024-w33.md  2024-w34.md  2024-w35.md  2024-w36.md  2024-w37.md  2024-w38.md  2024-w39.md  2024-w40.md  2024-w41.md  2024-w42.md  2024-w43.md  2024-w44.md  2024-w45.md  2024-w46.md  2024-w47.md  2024-w48.md  2024-w49.md  2025-10-11.md  2025-10-12.md  2025-10-13.md  2025-10-17.md  (+86 more)
.obsidian/: appearance.json  workspace.json
builder/: astro.config.mjs  package.json  pnpm-lock.yaml
builder/public/: robots.txt
builder/src/: env.d.ts
images/: 20251012_150007.heic  20251012_153537.heic  20251012_155141 1.heic
images/chat-image-generator/: dropdown.webm  modal.webm  selectable-element.webm
native-builder/: README.md  app.go  go.mod  go.sum
native-builder/functions/: build-article-list.go  calculate-rank.go  calculate-score.go  create-graph.go  get-article-contents.go  text-normalizer.go  utils.go
native-builder/public/: robots.txt  style.css
native-builder/types/: file-entry.go  structs.go
native-builder/utils/: build-article-list.go  build-article-page.go  calculate-score.go  create-article-list-page.go  create-article-page.go  create-graph.go  create-sitemap.go  (+5 more)
weekly-summary/: README.md  diff  pyproject.toml
weekly-summary/src/weekly_summary/: __init__.py  __main__.py  get_weekly_diff.py
(+10 files in other folders)
